# fmf

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.rst  fmf.spec  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  pre-commit.yml  release.yml  step_build-wheel.yml  step_pre-commit.yml  step_test.yml
ci/: smoke.fmf
docs/: concept.rst  conf.py  context.rst  contribute.rst  examples.rst  features.rst  header.txt  index.rst  modules.rst  releases.rst  toolbelt-catalog.yaml
examples/child/: main.fmf
examples/child/nobody/: main.fmf
examples/child/son/: main.fmf
examples/code/: simple.py
examples/conditions/: main.fmf
examples/conf_formatting/: main.fmf  wget
examples/coreutils/: coreutils.spec
examples/coreutils/tests/: main.fmf  test-basics  tests.yml
examples/coreutils/tests/readlink-cannot-handle-recursive-symlinks/: Makefile  PURPOSE  runtest.sh
examples/deep/: main.fmf
examples/empty/: main.fmf
examples/empty/nothing/: ignored.txt
examples/hidden/.fmf/: config
examples/inheritance/: one.fmf
examples/inheritance/one/: main.fmf
examples/merge/: main.fmf  parent-dict.fmf  parent-list.fmf  parent.fmf  parent_dict.fmf  parent_list.fmf  stray.fmf
examples/no_inherit/: main.fmf
examples/no_inherit/a/: main.fmf
examples/plugin_resolver/: main.fmf
examples/plugin_resolver/a/: main.fmf
examples/plugin_resolver/a/b/: main.fmf
examples/plugin_resolver/a/b/c/: main.fmf
examples/referencing/: main.fmf
examples/scatter/: main.fmf
examples/scatter/object/: main.fmf
examples/testsets/: main.fmf
examples/testsets/inittask1/: main.fmf  setup.sh
examples/testsets/simpletest/: main.fmf
examples/testsets/simpletest/special-case1/: main.fmf
examples/testsets/simpletest/special-case2/: main.fmf
examples/touch/: main.fmf  runtest.sh
examples/wget/: .hidden.fmf  main.fmf
examples/wget/.hidden/: main.fmf
examples/wget/download/: main.fmf
examples/wget/protocols/: main.fmf
examples/wget/protocols/ftp/: main.fmf
examples/wget/protocols/http/: main.fmf
examples/wget/protocols/https/: main.fmf
examples/wget/recursion/: deep.fmf  fast.fmf  main.fmf
examples/wget/requirements/: main.fmf
fmf/: __init__.py  base.py  cli.py  constants.py  context.py  output_interpreter.py  plugin_loader.py  plugins.py  profile.py  utils.py
fmf/_compat/: jsonschema.py
fmf/plugins/: bash.py  reference.py
fmf/plugins/pytest/: __init__.py  constants.py  plugin.py  tmt_semantic.py
plans/: features.fmf  integration.fmf  main.fmf
stories/: docs.fmf  explore.fmf  select.fmf
tests/: .test.fmf  main.fmf  test_base.py  test_cli.py  test_cli_fmf_output.py  test_smoke.py  test_utils.py
tests/basic/: main.fmf  test.sh
tests/core/empty/: main.fmf  test.sh
tests/core/empty/data/virtual/: name.fmf
tests/core/inherit/: main.fmf  test.sh
tests/core/inherit/data/: ci.fmf  main.fmf
tests/core/inherit/data/full/: main.fmf
tests/core/inherit/data/mini/: main.fmf
tests/core/inherit/data/plans/: features.fmf  main.fmf
tests/core/inherit/invalid/: directive.fmf
tests/core/is-leaf/: main.fmf  test.sh
tests/core/is-leaf/data/foo/: main.fmf
tests/core/select/: main.fmf  test.sh
tests/core/select/data/foo/: hidden.fmf  main.fmf
tests/docs/: test.sh
tests/help/: main.fmf  test.sh
tests/unit/: main.fmf  pytest.ini  test_adjust.py  test_base.py  test_cli.py  test_context.py  test_items.py  test_modify.py  test_no_inheritance_mark.py  test_plugin.py  test_profile.py  test_smoke.py  test_utils.py
tests/unit/assets/: schema_base.yaml  schema_plan.yaml  schema_test.yaml  schema_test_ref.yaml
tests/unit/data/config/: test_plugin_config.py
tests/unit/data/config/.fmf/: config
tests/unit/data/profile/: profile_file.yaml
tests/unit/data/profile/tree/: plan.fmf  test.fmf
tests/unit/data/select_source/: main.fmf
tests/unit/data/select_source/foo/: special.fmf
tests/unit/data/select_source/foo/inner/: main.fmf
tests/unit/data/tests_plugin/: main.fmf  runtest.sh  test_basic.py  test_rewrite.fmf  test_rewrite.py
testsets/: docs.fmf  smoke.fmf
